// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 ezarLU"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iuqrEV"
          id={null}
          label="1"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            1
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Badge
      </p>
    </section>
  </div>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 ezarLU"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iuqrEV"
          id={null}
          label="1"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            1
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        1-Digit
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iuqrEV"
          id={null}
          label="21"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            21
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        2-Digit
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iuqrEV"
          id={null}
          label="321"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            321
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        3-Digit
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iuqrEV"
          id={null}
          label="4321"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            4321
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        4-Digit
      </p>
    </section>
  </div>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 ezarLU"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iuqrEV"
          id={null}
          label="9+"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            9+
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Max 10
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iuqrEV"
          id={null}
          label="99+"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            99+
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Max 100
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iuqrEV"
          id={null}
          label="999+"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            999+
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Max 1000
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iuqrEV"
          id={null}
          label="9999+"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            9999+
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Max 10k
      </p>
    </section>
  </div>
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 ezarLU"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 bdHaNe"
          id={null}
          label="Info"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            Info
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Info
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 kUvTjI"
          id={null}
          label="Success"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            Success
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Success
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 jJJrvs"
          id={null}
          label="Warning"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            Warning
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Warning
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iuqrEV"
          id={null}
          label="Alert"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            Alert
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Alert
      </p>
    </section>
  </div>
</section>
`;

exports[` 5`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 ezarLU"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iYhgcQ"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iuqrEV"
          id={null}
          label="1"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            1
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Top-Left
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 fLaBfc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iuqrEV"
          id={null}
          label="1"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            1
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Bottom-Left
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 iCQKJc"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iuqrEV"
          id={null}
          label="1"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            1
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Top-Right
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 cpakTw"
        id={null}
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iuqrEV"
          id={null}
          label="1"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            1
          </label>
        </div>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Bottom-Right
      </p>
    </section>
  </div>
</section>
`;
